Fixed profile page on tablet breakpoint

--- a/client/src/pages/ProfilePage/ProfilePage.scss
+++ b/client/src/pages/ProfilePage/ProfilePage.scss
@@ -349,7 +349,7 @@
     }
 
     @include tablet {
-      font-size: 1.125rem;
+      font-size: 1rem;
     }
 
     @include desktop {
@@ -358,17 +358,16 @@
   }
 
   &__dropdown {
+    @include block-item(13.9688rem, 3.5625rem);
     display: flex;
     align-items: center;
     gap: 0.5rem;
     font-family: $primary-font;
     font-size: 1rem;
-    width: 100%; 
     background: $neutral-white;
     border: 2px solid $primary-light-blue;
     border-radius: 0.5rem;
     box-shadow: $shadow-primary;
-    height: 2.875rem;
     cursor: pointer;
     color: $primary-dark-blue;
     padding-left: 1rem;
@@ -402,6 +401,10 @@
     align-items: center;
     justify-content: center;
     transition: transform 0.1s ease;
+
+    @include tablet {
+      margin-top: .15rem;
+    }
 
     @include desktop {
       margin-top: -.15rem;
@@ -472,7 +475,6 @@
     background: $neutral-white;
     border-radius: 0.5rem;
     box-shadow: $shadow-primary;
-    
     cursor: pointer;
     color: $primary-dark-blue;
 
